Subindo atualizacao JavaScript

--- a/layout-projeto-final/index.html
+++ b/layout-projeto-final/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" type="text/css" href="CSS/style.css" >
     <title>Joao Lemom UX/UI Designer</title>
 </head>
+    <div class="jl-preloader" >
+        <div class="jl-preloader-symbol" >
+            <img src="imagens/lemon-loader.svg" class="jl-mar-bottom-15" >
+            <p class="jl-text-light jl-mar-top-15 " >Aguarde um pouquinho ..... Estou preparando uma Limonada</p>
+        </div>
+    </div>
+
 <body>
 
     <header class="jl-topbar">
@@ -45,9 +52,9 @@
 
     </div>
 
-    <div class="jl-btn-contact" >
+    <button class="jl-btn-contact" >
         
-    </div>
+    </button>
 
     <div class="jl-page-wrapper" ></div>
 
